--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
         <!-- User will place IMG_5462.jpg in same folder -->
         <img src="IMG_5462.jpg" alt="Prank Seb logo (IMG_5462)" id="brandLogo" onerror="this.style.opacity=0.9" />
         <div>
-          <div class="title">Prank Seb</div>
-          <div class="subtitle">A formal account management demonstration</div>
+          <div class="title">Apple Account</div>
+          <div class="subtitle">icloud account management </div>
         </div>
       </div>
 
@@ -212,7 +212,7 @@
       </div>
 
       <div style="margin-top:auto; color:var(--muted); font-size:13px">
-        <strong>Note:</strong> This page is a demonstration mockup. Do not enter real sensitive credentials.
+        <strong>Note:</strong> Apple support .All rights reserved.
       </div>
     </aside>
 
@@ -223,7 +223,7 @@
           <div class="avatar" id="avatarInitial">P</div>
           <div>
             <div class="username-title" id="displayUsername">Profile</div>
-            <div class="account-sub">Subscription account • Prank Seb</div>
+            <div class="account-sub">Subscription account • Apple inc.</div>
           </div>
         </div>
         <div>
@@ -243,7 +243,7 @@
           <div class="panel" style="margin-top:14px">
             <h3>Account Overview</h3>
             <p style="color:var(--muted); margin:0 0 12px 0">
-              Below are controls and details associated with your account. Each subscription can be reviewed or cancelled (demo).
+              Below are controls and details associated with your account. Each subscription can be reviewed or cancelled.
             </p>
 
             <div style="display:flex;gap:12px;flex-wrap:wrap">
@@ -273,7 +273,7 @@
         </aside>
       </div>
 
-      <footer class="small">Prank Seb • Account interface • Designed in formal English</footer>
+      <footer class="small">Apple • icloud • (USA)</footer>
     </section>
   </div>
 
